@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- metal fonts in jdk 1.5.0beta2
 - drag and drop, not at caret position?
 
 [error] Buffer: Exception while sending buffer event to org.gjt.sp.jedit.textare
